# swagger.yaml
@@ -205,41 +205,6 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
-  /api/comments:
-    post:
-      summary: Add comment
-      description: |
-        Vulnerable to:
-        - Stored XSS through comment content
-        - SQL injection in all fields
-        - No input sanitization
-        - No authentication required
-      requestBody:
-        required: true
-        content:
-          application/x-www-form-urlencoded:
-            schema:
-              type: object
-              properties:
-                product_id:
-                  type: string
-                  description: Product ID (vulnerable to SQL injection)
-                username:
-                  type: string
-                  description: Username (vulnerable to SQL injection)
-                comment:
-                  type: string
-                  description: Comment content (vulnerable to XSS)
-      responses:
-        '200':
-          description: Comment added successfully
-        '500':
-          description: Server error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-
 components:
   schemas:
     Error:
